--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
 
-    scroll-behavior: smooth;
+    /* scroll-behavior: smooth; */
 }
 
 body {
@@ -74,6 +74,7 @@ img {
 
 }
 .event{
+    scroll-behavior: smooth;
     padding-top:100px ;
 
 }
